<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profil">


    <fragment
        android:id="@+id/nav_liste_matchs"
        android:name="com.example.bet.views.fragment.ListeMatchs_Fragment"
        android:label="@string/listeMatch"
        tools:layout="@layout/fragment_liste_matchs" />
    <fragment
        android:id="@+id/nav_equipe"
        android:name="com.example.bet.views.fragment.Equipe_Fragment"
        android:label="@string/equipe"
        tools:layout="@layout/fragment_equipe_list" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.bet.views.fragment.Profil_Fragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/nav_achat"
        android:name="com.example.bet.views.fragment.Achat_Fragment"
        android:label="@string/achat"
        tools:layout="@layout/fragment_achat" />
    <fragment
        android:id="@+id/nav_calendrier"
        android:name="com.example.bet.views.fragment.Calendrier_Fragment"
        android:label="@string/calendrier"
        tools:layout="@layout/fragment_calendrier" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.bet.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_vente"
        android:name="com.example.bet.views.fragment.Vente_Fragment"
        android:label="@string/vente"
        tools:layout="@layout/fragment_vente" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.bet.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>